KAAV-1047 modify styles to match original, prevent fields stretching

--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -195,8 +195,7 @@ ul {
 
 .project-input-container .ui.segment .field {
   border-left: 6px solid transparent;
-  padding-left: 12px;
-  margin-left: -18px;
+  margin-left: -22px;
 }
 
 .project-input-container .ui.segment {
